--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set -g status-keys vi
 set -g history-limit 10000
 
 setw -g mode-keys vi
-setw -g mode-mouse on
+set -g mouse on
 setw -g monitor-activity on
 
 bind-key | split-window -h
