Disable mouse on tmux for PuTTY mouse selection

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,8 @@ set -g status-keys vi
 set -g history-limit 10000
 
 setw -g mode-keys vi
-set -g mouse on
+# Disabled for PuTTY mouse selection
+# set -g mouse on
 setw -g monitor-activity on
 
 bind-key | split-window -h
